# Cocoapods-Deprecation-Exploration

./: .gitignore  README.md
CMake/: README.md
CMake/ReactNative/ReactNative/: CMakeLists.txt  Dummy.mm
CMake/ReactNative/ReactNativeRenderer/: CMakeLists.txt
CMake/ReactNativeApp/CMakeApp/CMakeApp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
CMake/ReactNativeApp/CMakeApp/CMakeApp.xcodeproj/: project.pbxproj
CMake/ReactNativeApp/CMakeApp/ReactNative.framework/: Info.plist  ReactNative
Cocoapods/: README.md
Cocoapods/CocoapodsApp/ReactNativeApp/ReactNative.framework/: Info.plist  ReactNative
Cocoapods/CocoapodsApp/ReactNativeApp/ReactNativeApp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
Cocoapods/CocoapodsApp/ReactNativeApp/ReactNativeApp.xcodeproj/: project.pbxproj
Cocoapods/CocoapodsLibrary/ReactNative/: Podfile
Cocoapods/CocoapodsLibrary/ReactNative/ReactNative.xcodeproj/: project.pbxproj
Cocoapods/CocoapodsLibrary/ReactNativeRenderer/: ReactNativeRenderer.podspec
PlainXcode/: README.md
PlainXcode/ReactNativeFramework/: build.sh
PlainXcode/ReactNativeFramework/.build/: info.plist
PlainXcode/ReactNativeFramework/ReactNativeFramework/: Dummy.h  Dummy.mm
PlainXcode/ReactNativeFramework/ReactNativeFramework.xcodeproj/: project.pbxproj
PlainXcode/ReactNativeFrameworkTestApp/ReactNativeFrameworkTestApp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.mm  ViewController.h  ViewController.m  main.m
PlainXcode/ReactNativeFrameworkTestApp/ReactNativeFrameworkTestApp.xcodeproj/: project.pbxproj
SPM/: README.md
SPM/ReactNative/: Package.swift  build.sh
SPM/ReactNativeApp/ReactNativeApp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.mm  ViewController.h  ViewController.m  main.m
SPM/ReactNativeApp/ReactNativeApp.xcodeproj/: project.pbxproj
SPM/ReactNativeBinary/: Package.swift
(+59 files in other folders)
